feat(auth): autenticación JWT con refresh tokens, rate limiting y logout